<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue95"
    tools:context="com.jyjang.carSpeed.GearActivity">

    <TextView
        android:id="@+id/currentGearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/current_gear_unknown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonNeutral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentGearTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/neutral" />

    <Button
        android:id="@+id/buttonReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonNeutral"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/reverse" />

    <Button
        android:id="@+id/buttonPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonReverse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/park" />

    <Button
        android:id="@+id/buttonDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/drive" />

</RelativeLayout>
