<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="300"
    android:background="@color/BackGroundColor2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="250"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/ev_charge_time_remaining"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/BackGroundColor2"
                android:paddingHorizontal="10dp"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="70sp"
                android:textStyle="bold" />
        </LinearLayout>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <com.github.anastr.speedviewlib.AwesomeSpeedometer
                android:id="@+id/awesomeSpeedometer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/speedometerValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/BackGroundColor2"
                    android:paddingHorizontal="10dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speedometerUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/BackGroundColor2"
                    android:paddingTop="35dp"
                    android:text="km"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>


        </FrameLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="end">

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/battery"
                    app:tint="@color/gray" />

                <TextView
                    android:id="@+id/ev_battery_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="10dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="60sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/ignition_state_text"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_white"
                android:gravity="center"
                android:text=""
                android:padding="5dp"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/auto_parking_image"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/parking"
                android:padding="5dp"
                app:tint="@color/gray"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/charge_port_connect_image"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ev_charge_image"
                android:padding="5dp"
                app:tint="@color/gray"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/charge_port_open_image"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                app:tint="@color/gray"
                android:src="@drawable/port_open" />

        </LinearLayout>


        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            >

            <TextView
                android:id="@+id/park_gear_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_background"
                android:gravity="center"
                android:text="@string/p"
                android:textColor="@android:color/white"
                android:textSize="62sp" />

            <TextView
                android:id="@+id/reverse_gear_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_background"
                android:gravity="center"
                android:text="@string/r"
                android:textColor="@android:color/white"
                android:textSize="62sp" />

            <TextView
                android:id="@+id/neutral_gear_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_background"
                android:gravity="center"
                android:text="@string/n"
                android:textColor="@android:color/white"
                android:textSize="62sp" />

            <TextView
                android:id="@+id/drive_gear_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_background"
                android:gravity="center"
                android:text="@string/d"
                android:textColor="@android:color/white"
                android:textSize="62sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout >
